# sgemm.cu

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  benchmark.cu  benchmark.sh  format.sh  plot_benchmark_data.py  plot_benchmark_results.py  test.cu  test.sh
common/: helper_cuda.h  helper_matrix.h  helper_string.h
scripts/: disable_pmode.sh  enable_pmode.sh  lock_clocks.sh  reset_clocks.sh
src/: sgemm.cuh
src/kernels/: 128x128x8.cuh  128x128x8_texld.cuh  128x256x8.cuh  basic.cuh
